# django-teryt-tree

./: .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.contrib/docker/: Dockerfile
.github/workflows/: main.yml  publish.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
teryt_tree/: __init__.py  admin.py  apps.py  autocomplete_light_registry.py  factories.py  factory.py  models.py
teryt_tree/dal_ext/: filters.py  views.py
teryt_tree/filters_ext/: filters.py
teryt_tree/locale/pl/LC_MESSAGES/: django.po
teryt_tree/management/commands/: load_simc.py  load_terc.py  load_teryt.py
teryt_tree/migrations/: 0001_initial.py  0002_auto_20150803_0543.py  0002_auto_20151216_0201.py  0003_auto_20150803_1942.py  0003_auto_20161210_1515.py  0004_auto_20150804_0016.py  0004_auto_20170712_2335.py  0005_auto_20150816_0342.py  0005_auto_20191020_1938.py  0006_auto_20191020_1953.py  0007_auto_20191020_2005.py
teryt_tree/rest_framework_ext/: serializers.py  viewsets.py
tests/: apps.py  models.py  settings.py  test_command.py  test_factories.py  test_factory.py  test_models.py  urls.py
tests/dal_ext/: test_filters.py
